[package]
name = "alen"
version = "0.3.1"
authors = ["Jakob Nybo Nissen <jakobnybonissen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A command-line program to view DNA, RNA or protein alignments in FASTA format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bio = "1.1.0"
clap = {version = "4.3.0", features = ["derive", "std"]}
crossterm = "0.26.1"
regex = "1.8.2"
unicode-segmentation = "1.10.1"

[profile.release]
strip = true
lto = true
