[package]
name = "alen"
version = "0.3.2"
authors = ["Jakob Nybo Nissen <jakobnybonissen@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A command-line program to view DNA, RNA or protein alignments in FASTA format."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bio = "2.3.0"
clap = {version = "4.5.41", features = ["derive", "std"]}
crossterm = "0.29.0"
niffler = "3.0.0"
regex = "1.11.1"
unicode-segmentation = "1.12.0"

[profile.release]
lto = true
